# reeknote

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
Formula/: reeknote.rb
aur/: PKGBUILD.template
nix/: package.nix
npm/reeknote/: README.md  package.json
npm/reeknote-linux-arm64/: package.json
npm/reeknote-linux-x64/: package.json
npm/reeknote/lib/: run.js
npm/rnsync/: README.md  package.json
npm/rnsync-linux-arm64/: package.json
npm/rnsync-linux-x64/: package.json
npm/rnsync/lib/: run.js
packaging/fedora/: reeknote.spec.in
packaging/freebsd/: README.md
packaging/freebsd/reeknote/: Makefile  Makefile.crates  pkg-descr  pkg-message
packaging/obs/: reeknote.spec.in
src/: argparser.rs  config.rs  edam_client.rs  editor.rs  errors.rs  geeknote.rs  gnsync.rs  lib.rs  main.rs  models.rs  oauth.rs  out.rs  reeknote.rs  rnsync.rs  storage.rs  tools.rs
tests/: cli_snapshots.rs  editor_editing.rs  editor_rendering.rs
tests/snapshots/: gnsync_help.snap  reeknote_about.snap  reeknote_find_help.snap  reeknote_global_help.snap  reeknote_invalid_command.snap  reeknote_settings.snap  rnsync_help.snap
tools/: build_apt_repository.sh  build_cli_wheel.py  build_deb.sh  build_obs_package.sh  build_rpm.sh  build_snap.sh  build_vendor_archive.sh  generate_freebsd_cargo_crates.py  publish_obs_package.sh  publish_snap_package.sh  update_aur_package.sh  write_apt_release.py
