[package]
name = "reeknote"
version = "0.1.0"
edition = "2024"
description = "Command-line Evernote client"
license = "GPL-3.0-only"
repository = "https://gitlab.com/vitaly-zdanevich/reeknote"
homepage = "https://gitlab.com/vitaly-zdanevich/reeknote"
readme = "README.md"
keywords = ["evernote", "geeknote", "notes", "cli", "sync", "reeknote", "obsidian", "notesnook", "personal_database", "bending_spoons"]
categories = ["command-line-utilities"]
include = ["Cargo.lock", "Cargo.toml", "LICENSE", "README.md", "src/**", "tests/**"]

[[bin]]
name = "reeknote"
path = "src/main.rs"

[dependencies]
evernote = "0.1.2"
md5 = "0.7"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
thrift = "0.17.0"
